# advent_of_code_rust

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
aoc/: Cargo.toml  build.rs
aoc/src/: error.rs  input.rs  lib.rs  runners.rs
aoc/src/common/: md5.rs  mod.rs  permutation.rs
aoc/src/common/combinatorics/: combination.rs  mod.rs  permutation.rs
aoc/src/common/json/: error.rs  mod.rs  scanner.rs
aoc/src/solutions/y2015/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day20.rs  day21.rs  day23.rs  day24.rs  day25.rs  mod.rs
aoc_common/: Cargo.toml
aoc_common/src/: lib.rs
aoc_derive/: Cargo.toml
aoc_derive/src/: lib.rs
aoc_run/: Cargo.toml
aoc_run/src/: main.rs  parser.rs  template.rs
aoc_run/templates/: aoc.template
