[package]
name = "aoc_derive"
version = "0.1.0"
edition = "2021"

[lib]
name = "aoc_derive"
proc_macro = true

[dependencies]
aoc_common = { path = "../aoc_common" }
proc-macro-error = "^1.0.0"
proc-macro2 = "^1.0.0"
quote = "^1.0.0"
syn = { version = "^1.0.0", features = ["full", "parsing"] }

[dev-dependencies]
trybuild = "^1.0.0"
