[package]
name = "aoc_run"
version = "0.1.0"
edition = "2021"
default-run = "aoc_run"

[dependencies]
aoc = { path = "../aoc" }
aoc_common = { path = "../aoc_common" }
aoc_derive = { path = "../aoc_derive" }
askama = "^0.12.0"
chrono = "^0.4.0"
clap = { version = "^4.1.0", features = ["cargo", "derive"] }
color-eyre = "^0.6.0"
eyre = "^0.6.0"
itertools = "^0.10.0"
lazy_static = "^1.4.0"
thiserror = "^1.0.0"
